--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,9 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.example.covid19"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -50,6 +50,17 @@ dependencies {
 
     //Bottom Navigation
     implementation 'com.aurelhubert:ahbottomnavigation:2.3.4'
+
+    //Circle Image
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+
+    //For metrial design
+
+    implementation "com.google.android.material:material:1.1.0-alpha02"
+
+
+    //Image Shape
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
 
 
 }
